--- a/templates/about.html
+++ b/templates/about.html
@@ -40,28 +40,28 @@ content %}
   <section id="team">
     <h2>Meet the Team</h2>
     <div class="team-member">
-      <img
+      <!-- <img
         src="{{ url_for('static', filename='team-member3.jpg') }}"
         alt="Brandon Leonard"
-      />
-      <h3>Brandon Leonard</h3>
-      <p>Team Leader</p>
+      /> -->
+      <h3>Brandon Leonard: </h3>
+      <p> Team Leader</p>
     </div>
     <div class="team-member">
-      <img
+      <!-- <img
         src="{{ url_for('static', filename='team-member1.jpg') }}"
         alt="Kwanele Nzimande"
-      />
-      <h3>Kwanele Nzimande</h3>
-      <p>Architect</p>
+      /> -->
+      <h3>Kwanele Nzimande: </h3>
+      <p> Architect</p>
     </div>
     <div class="team-member">
-      <img
+      <!-- <img
         src="{{ url_for('static', filename='team-member2.jpg') }}"
         alt="Luthando Mbuyane"
-      />
-      <h3>Luthando Mbuyane</h3>
-      <p>Communications</p>
+      /> -->
+      <h3>Luthando Mbuyane: </h3>
+      <p> Communications</p>
     </div>
   </section>
 
