--- a/templates/base.html
+++ b/templates/base.html
@@ -23,10 +23,10 @@
     {% block extra_css %}{% endblock %}
   </head>
   <body>
-    <header class="navbar navbar-expand-lg navbar-light bg-light">
+    <header class="navbar navbar-expand-lg custom-header navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="{{ url_for('home') }}">
-          <h1 class="logo">SEACLEAR</h1>
+          <h2 class="logo">SEACLEAR</h2>
         </a>
         <button
           class="navbar-toggler"
