--- a/templates/admin.html
+++ b/templates/admin.html
@@ -23,7 +23,7 @@ block content %}
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     "
   >
-    <h1 style="text-align: center; color: #333333">Admin Dashboard</h1>
+    <h1 style="text-align: center; color: #333333; background-color: #007bff00;">Admin Dashboard</h1>
     <div style="display: flex; justify-content: space-around; flex-wrap: wrap">
       <a
         href="/admin/manage-posts"
