--- a/static/css/all_beaches.css
+++ b/static/css/all_beaches.css
@@ -168,6 +168,7 @@ text-decoration: none;
     background-color: #e7f3ff;
     transition: transform 0.3s ease;
     position: relative;
+    height: 270;
 }
 
 /* Status Indicator */
@@ -249,6 +250,7 @@ text-decoration: none;
 .beach-card img, .card img {
     width: 100%;
     border-radius: 10px;
+    height: 120;
 }
 
 /* Beach card details */
@@ -289,7 +291,7 @@ text-decoration: none;
 /* General Image Styling */
 img {
     width: 100%;
-    height: auto;
+    height: 150px;
     max-width: 100%; /* Ensure images never exceed their container's width */
 }
 
@@ -330,10 +332,6 @@ img {
         font-size: 0.9rem;
         padding: 8px 12px; /* Adjust button padding */
     }
-
-    h4, h5 {
-        font-size: 1.2rem; /* Make headings smaller */
-    }
 }
 
 
@@ -362,10 +360,6 @@ img {
     .btn-primary {
         font-size: 0.8rem; /* Smaller button text */
         padding: 6px 10px; /* Reduce button padding */
-    }
-
-    h4, h5 {
-        font-size: 1rem; /* Further reduce heading sizes */
     }
 
     p {
