--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -79,11 +79,13 @@
         background-color: #e7f3ff;
         transition: transform 0.3s ease;
         position: relative;
+        height: 250px;
     }
 
     .card img {
         width: 100%;
         border-radius: 10px;
+        height: 120px;
     }
 
     .card-content {
