--- a/templates/beach_detail.html
+++ b/templates/beach_detail.html
@@ -65,6 +65,7 @@
                         Weekend forecast >
                     </a>
                 </div>
+                <a href="{{ url_for('community_report') }}" class="btn btn-primary">Report this beach</a>
             </div>
 
             <!-- Amenities Section -->
