--- a/templates/educational.html
+++ b/templates/educational.html
@@ -32,7 +32,7 @@
     <section class="words-symbols-section mb-4">
       <h2>Words and Symbols Used on the Website</h2>
       <p>Our website uses specific terms and Grade symbols to represent ratings of water quality and beach conditions. Here’s a guide to help you understand them:</p>
-      <img src="{{ url_for('static', filename='images/grading.jpeg') }}" alt="water quality grades infographic" />
+      <img class="infographic-image" src="{{ url_for('static', filename='images/grading.jpeg') }}" alt="water quality grades infographic" />
       <p class="citation">Information source: <a href="https://www.dffe.gov.za/sites/default/files/legislation/2023-09/waterqualityguideline2022.pdf">Department of Forestry, Fisheries and the Environment</a></p>
     </section>
 
