--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,8 @@
-
 {% extends "base.html" %}
 
 {% block title %}About Us{% endblock %}
 
-{% block content %}
+{% block extra_css %}
 <style>
   /* General Styles */
   main {
