manage_community reports fixed

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -23,7 +23,9 @@ block content %}
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     "
   >
-    <h1 style="text-align: center; color: #333333; background-color: #007bff00;">Admin Dashboard</h1>
+    <h1 style="text-align: center; color: #333333; background-color: #007bff00">
+      Admin Dashboard
+    </h1>
     <div style="display: flex; justify-content: space-around; flex-wrap: wrap">
       <a
         href="/admin/manage-posts"
@@ -72,6 +74,22 @@ block content %}
           font-size: 16px;
         "
         >Manage Reports</a
+      >
+      <a
+        href="/admin/manage-community-reports"
+        style="
+          display: inline-block;
+          min-width: 200px;
+          margin: 10px;
+          padding: 15px 25px;
+          background-color: #007bff;
+          color: #ffffff;
+          text-decoration: none;
+          text-align: center;
+          border-radius: 5px;
+          font-size: 16px;
+        "
+        >Manage Community Reports</a
       >
     </div>
   </div>
