--- a/templates/add_beach.html
+++ b/templates/add_beach.html
@@ -21,9 +21,19 @@
       />
     </div>
     <div class="form-group mt-3">
+      <label for="location_code">Location Code</label>
+      <input
+        type="text"
+        class="form-control"
+        id="location_code"
+        name="location_code"
+        required
+      />
+    </div>
+    <div class="form-group mt-3">
       <label for="latitude">Latitude</label>
       <input
-        type="number"
+        type="text"
         step="any"
         class="form-control"
         id="latitude"
