--- a/templates/edit_report.html
+++ b/templates/edit_report.html
@@ -50,6 +50,18 @@ content %}
       />
     </div>
 
+    <div class="form-group">
+      <label for="category">Enterococci Count</label>
+      <input
+        type="text"
+        class="form-control"
+        id="category"
+        name="category"
+        value="{{ report.category }}"
+        required
+      />
+    </div>
+
     <button type="submit" class="btn btn-primary mt-3">Update Report</button>
     <!-- Back Button -->
     <a
